--- a/home.html
+++ b/home.html
@@ -65,9 +65,12 @@ function openMenu()
 </div>
 <! –– our table end here ––>
 
-<div class="linkbox">
-	<button class="w-button" type="button" name="myButton">website link</button>
-</div>
+    <div class="linkbox">
+      
+        <a href='https://bayanmansor.github.io/s23-web-store/' class="w-button"> website link </a>
+    
+
+    </div>
 
 </body>
 </html>
