--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@ function openMenu()
 
     <div class="linkbox">
       
-        <a href='https://bayanmansor.github.io/s23-web-store/' class="w-button"> website link </a>
+        <a href='https://bayanmansor.github.io/s23-web-store/home.html' class="w-button"> website link </a>
     
 
     </div>
