--- a/AboutUS.html
+++ b/AboutUS.html
@@ -14,7 +14,7 @@
            <div class="page-navbar"> 
               <div class='navMenu' id='navMenuId'>
               	<a href='home.html' class='main_links'>Home</a>
-                <a href='AboutUs.html' class='main_links'>AboutUs</a>
+                <a href='AboutUS.html' class='main_links'>AboutUs</a>
                 <a href='Appliances.html' class='main_links'>Appliances</a>
                
               </div>
