--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@ function openMenu()
           <div class="page-navbar"> 
               <div class='navMenu' id='navMenuId'>
                 <a href='home.html' class='main_links'>Home</a>
-                <a href='AboutUs.html' class='main_links'>AboutUs</a>
+                <a href='AboutUS.html' class='main_links'>AboutUs</a>
                 <a href='Appliances.html' class='main_links'>Appliances</a>
                
               </div>
