--- a/Appliances.html
+++ b/Appliances.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html >
+<!DOCTYPE html >
 <html lang="en">
    <head>
        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -29,10 +29,10 @@
 	  </tr>
                               
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>small fridge</td>
 	    <td><img src="images/fridge2.jpg" alt="Product 1"></td>
-	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td>$250.00</td>
+	    <td> small office fridge </td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('lg fridge', 350000.00, 1)">Add to Cart</button> 
 	  </td>
@@ -47,9 +47,9 @@
 	  </tr>
 
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>42 inch fridge</td>
 	    <td><img src="images/fridge1.jpg" alt="Product 1"></td>
-	    <td>$25.00</td>
+	    <td>$1200.00</td>
 	    <td>42 inch tv  </td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('samsung ice lcd screen', 550000.00, 1)">Add to Cart</button> 
@@ -65,10 +65,10 @@
 	  </tr>
 
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>waching machine LG</td>
 	    <td><img src="images/wachingmachine2.png" alt="Product 1"></td>
 	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td> LG waching machine 5 litre </td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart(' waching machien', 24000000.00, 1)">Add to Cart</button> 
 	  </td>
@@ -119,10 +119,10 @@
 	  </tr>
 
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>blender</td>
 	    <td><img src="images/blender.jpg" alt="Product 1"></td>
-	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td>$255.00</td>
+	    <td>food blener 500W</td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('', 250000.00, 1)">Add to Cart</button> 
 	  </td>
@@ -137,10 +137,10 @@
 	  </tr>
 
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>Food proccessor</td>
 	    <td><img src="images/blender.jpg" alt="Product 1"></td>
 	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td>blender 1500W </td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('blender 400W', 5550.00, 1)">Add to Cart</button> 
 	  </td>
@@ -155,10 +155,10 @@
 	  </tr>
 
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>waching machine</td>
 	    <td><img src="images/wachingmachine1.jpg" alt="Product 1"></td>
-	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td>$855.00</td>
+	    <td> small waching machine </td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('amazing waching machine made in syria', 1555550.00, 1)">Add to Cart</button> 
 	  </td>
@@ -173,10 +173,10 @@
 	  </tr>
 
 	  <tr>
-	  	<td>tv screen</td>
+	  	<td>Blender</td>
 	    <td><img src="images/blender.jpg" alt="Product 1"></td>
-	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td>$252.00</td>
+	    <td>150W blener for fast food prepare</td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('super fridge mega for office', 999990.00, 1)">Add to Cart</button> 
 	  </td>
@@ -193,8 +193,8 @@
 	  <tr>
 	  	<td>tv screen</td>
 	    <td><img src="images/screen.jpg" alt="Product 1"></td>
-	    <td>$25.00</td>
-	    <td>42 inch tv  </td>
+	    <td>$2522.00</td>
+	    <td>42  ULHD inch tv  </td>
 	    <td>
 	    <button id="add-to-cart-1" onclick="addToCart('tv screen 55 inch', 2000000.00, 1)">Add to Cart</button> 
 	  </td>
