--- a/Appliances.html
+++ b/Appliances.html
@@ -11,10 +11,13 @@
 	 <header class="page-head">
       <div class="logo"> </div>
        <div class="page-navbar"> 
-	         <div class='navMenu' id='navMenuId'><a href='home.html' class='main_links'>Home</a>
-	            <a href='AboutUs.html' class='main_links'>AboutUs</a>
-	             <a href='Appliances.html' class='main_links'>Appliances</a>
-	         </div>
+             <div class='navMenu' id='navMenuId'>
+		 <a href='home.html' class='main_links'>Home</a>
+                 <a href='AboutUS.html' class='main_links'>AboutUs</a>
+                 <a href='Appliances.html' class='main_links'>Appliances</a>
+
+			 
+	  </div>
        </div>
     </header>
 <div class="products-section">
